--- a/HCJS Tech/d03_link_css.html
+++ b/HCJS Tech/d03_link_css.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>link style</title>
     <link rel="stylesheet" href="css/d03_css.css">
+    
+    /*Universal selector*/
+    
     <style>
         *{
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
